--- a/css/styles.css
+++ b/css/styles.css
@@ -571,7 +571,7 @@ input[type='checkbox'] {
 		text-align: center;
 	}
 	#about{
-		padding-top: 80px;
+		padding-top: 100px;
 	}
 	.header{
 		padding-top: 180px;
@@ -628,7 +628,7 @@ input[type='checkbox'] {
 
 .icons-container img {
 	width: 50px;
-	margin-right: 0.625rem;
+	margin-right: 0.2rem;
 	margin-bottom: 0.75rem;
 }
 
@@ -706,137 +706,18 @@ input[type='checkbox'] {
 	transition: all 0.2s;
 }
 
-.basic-4 .image-container:hover img {
+/* .basic-4 .image-container:hover img {
 	-moz-transform: scale(1.15);
 	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-} 
+}  */
 /* end of hover animation */
 
 
-/************************/
-/*     Testimonials     */
-/************************/
-.cards-1 {
-	padding-top: 3rem;
-	padding-bottom: 3.875rem;
-}
-
-.cards-1 .h2-heading {
-	margin-bottom: 3rem;
-	text-align: center;
-}
-
-.cards-1 .card {
-	margin-bottom: 4rem;
-	border: none;
-}
-
-.cards-1 .card-body {
-	padding: 0;
-	text-align: center;
-}
-
-.cards-1 .testimonial-text {
-	margin-bottom: 1.625rem;
-}
-
-.cards-1 img {
-	display: inline-block;
-	width: 60px;
-	margin-bottom: 0.875rem;
-	border-radius: 50%;
-}
-
-.cards-1 .text {
-	margin-top: 0.375rem;
-}
-
-.cards-1 .testimonial-author {
-	color: #24262a;
-}
-
-.cards-1 .testimonial-author,
-.cards-1 .occupation {
-	font-size: 0.875rem;
-	line-height: 1.375rem;
-}
 
 
-/*********************/
-/*     Questions     */
-/*********************/
-.accordion-1 {
-	padding-top: 7.75rem;
-	padding-bottom: 6.75rem;
-}
-
-.accordion-1 .h2-heading {
-	margin-bottom: 2.5rem;
-	text-align: center;
-}
-
-.accordion-1 .card {
-	margin-bottom: 1.75rem;
-	border: none;
-}
-
-.accordion-1 .card-header {
-	padding: 0;
-	border: none;
-	background-color: transparent;
-}
-
-.accordion-1 .card button {
-	padding: 0;
-	color: #24262a;
-	font-weight: 600;
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-	font-family: 'Poppins';
-}
-
-.accordion-1 .card button:hover {
-	text-decoration: none;
-}
-
-.accordion-1 .card button:before {
-	float: left;
-	margin-right: 0.625rem;
-	font-family: 'Font Awesome 5 Free';
-	font-weight: 900;
-	content: "\f078";
-	transition: all 0.2s;
-}
-
-.accordion-1 .card button.collapsed:before {
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-	transform: rotate(180deg);
-} 
-
-.accordion-1 .card-body {
-	padding: 0.75rem 1.5rem 0.5rem 1.5rem;
-}
 
 
-/*******************/
-/*     Contact     */
-/*******************/
-.form-1 {
-	padding-top: 7.75rem;
-	padding-bottom: 7rem;
-	text-align: center;
-}
-
-.form-1 .h2-heading {
-	margin-bottom: 0.75rem;
-	text-align: center;
-}
-
-.form-1 .p-heading {
-	margin-bottom: 4rem;
-}
 
 
 /******************/
