--- a/css/styles.css
+++ b/css/styles.css
@@ -172,8 +172,8 @@ a:hover {
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #424769;
-	background-color: #424769;
+	border: 1px solid #1B4242;
+	background-color: #1B4242;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -184,7 +184,7 @@ a:hover {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #424769; /* needs to stay here because of the color property of a tag */
+	color: #1B4242; /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
@@ -210,7 +210,7 @@ a:hover {
 .btn-outline-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #24262a;
+	border: 1px solid #1B4242;
 	background-color: transparent;
 	color: #24262a;
 	font-weight: 600;
@@ -221,7 +221,7 @@ a:hover {
 }
 
 .btn-outline-lg:hover {
-	background-color: #24262a;
+	background-color: #1B4242;
 	color: #ffffff;
 	text-decoration: none;
 }
@@ -372,7 +372,7 @@ input[type='checkbox'] {
 /*     Navigation     */
 /**********************/
 .navbar {
-	background-color: #24262a;
+	background-color: #43766C;
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0.875rem;
@@ -407,7 +407,7 @@ input[type='checkbox'] {
 	padding-left: 1rem;
 	overflow-y: auto;
 	visibility: hidden;
-	background-color: #24262a;
+	background-color: #43766C;
 	transition: visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
 	transition: transform .3s ease-in-out, visibility .3s ease-in-out;
 	transition: transform .3s ease-in-out, visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
@@ -444,7 +444,7 @@ input[type='checkbox'] {
 	content:'';
 	width: 0;
 	height:3px;
-	background:#424769;
+	background:#1B4242;
 	position: absolute;
 	left: 0;
 	bottom: -6px;
@@ -469,7 +469,7 @@ input[type='checkbox'] {
 .header {
 	padding-top: 7rem;
 	padding-bottom: 5.5rem;
-	background:black;
+	background:#43766C;
 	
 }
 
@@ -508,7 +508,7 @@ input[type='checkbox'] {
 	color: #ababab;
 }
 .custom_bg{
-	background-color: black;
+	background-color: #43766C;
 }
 
 .sub-title{
@@ -532,7 +532,7 @@ input[type='checkbox'] {
 	content:'';
 	width:0;
 	height: 3px;
-	background: #424769;
+	background: #1B4242;
 	position: absolute;
 	left:0;
 	bottom: -8px;
@@ -548,7 +548,8 @@ input[type='checkbox'] {
 	color: white;
 }
 .tab-contents ul li span{
-	color:#424769;
+	color:#1B4242;
+	font-weight: bolder;
 	font-size: 14px;
 }
 .tab-contents{
@@ -608,7 +609,7 @@ input[type='checkbox'] {
 .basic-2 .fas,
 .basic-2 .far {
 	margin-bottom: 1.75rem;
-	color: #424769;
+	color: #1B4242;
 	font-size: 3.5rem;
 }
 
@@ -703,7 +704,7 @@ input[type='checkbox'] {
 .footer {
 	padding-top: 3rem;
 	padding-bottom: 2rem;
-	background-color: black;
+	background-color: #43766C;
 	text-align: center;
 }
 
@@ -743,7 +744,7 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-	background-color: black;
+	background-color: #43766C;
 	text-align: center;
 }
 
@@ -769,13 +770,13 @@ a.back-to-top {
 	width: 42px;
 	height: 42px;
 	border-radius: 30px;
-	background: #3a424d url("../images/up-arrow.png") no-repeat center 47%;
+	background: #1B4242 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 18px 18px;
 	text-indent: -9999px;
 }
 
 a:hover.back-to-top {
-	background-color: #424769;
+	background-color: #1B4242;
 }
 
 
@@ -791,8 +792,8 @@ a:hover.back-to-top {
 	bottom: 60px;
 	width:42px;
 	height: 42px;
-	background-color: #424769;
-	border: #424769;
+	background-color: #1B4242;
+	border: #1B4242;
 	display: block;
 	transition: all 400ms;
 	text-align: center;
