--- a/css/styles.css
+++ b/css/styles.css
@@ -802,7 +802,7 @@ a:hover.back-to-top {
  
    .wasp:hover{
 	transform: scale(1.2);
-	background-color: #424769;
+	background-color: #1B4242;
   }
   /* whatsapp container ends */
   
